--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moonlight - Contacto</title>
     <link rel="shortcut icon" href="Imagenes/Moonlight.png">
-    <link rel="stylesheet" href="Styles/estilos.css" />
+    <link href="css/styles.css" rel="stylesheet" />
 </head>
 <body id="fondo-4">
     <nav class="navegation">
