--- a/fotografias.html
+++ b/fotografias.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moonlight - Fotografías</title>
     <link rel="shortcut icon" href="imagenes/Moonlight.png">
-    <link rel="stylesheet" href="Styles/estilos.css" />
+    <link href="css/styles.css" rel="stylesheet" />
 </head>
 <body id="fondo-2">
     <main>
