--- a/moda.html
+++ b/moda.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Moonlight - Moda</title>
-  <link rel="stylesheet" href="Styles/estilos.css">
+  <link href="css/styles.css" rel="stylesheet" />
 </head>
 <body id="fondo-5">
   <div id="grid-2">
