--- a/fotografias.html
+++ b/fotografias.html
@@ -6,12 +6,16 @@
     <title>Moonlight - Fotografías</title>
     <link rel="shortcut icon" href="imagenes/Moonlight.png">
     <link href="css/styles.css" rel="stylesheet" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 </head>
 <body id="fondo-2">
     <main>
-        <nav class="navegation-2">
+        <nav class="navegation-2 animate__animated animate__fadeInLeft">
             <a href="index.html">
-                <img src="Imagenes/Moonlight.png" width="120px" title="Inicio" 
+                <img src="Imagenes/Moonlight.png" class="moonlight animate__animated animate__rotateIn" title="Inicio" 
                 />
             </a>
             <ul>
@@ -31,11 +35,11 @@
         </nav>
     </main>
     <header>
-        <h2 class="fotografías-1">Fotografías</h2>
+        <h2 class="fotografías-1 animate__animated animate__fadeInDown">Fotografías</h2>
     </header>
     <div>
         <div class="albumes">
-            <div class="foto foto-izq">
+            <div class="foto foto-izq animate__animated animate__fadeInLeft">
             <a href="moda.html">
                 <img class="bordes-redondeados" 
                 src="Imagenes/Foto-Modelo.jpg" 
@@ -45,7 +49,7 @@
             </a>
             <h2 class="titulos"> Moda</h2>
             </div>
-            <div class="foto foto-der">    
+            <div class="foto foto-der animate__animated animate__fadeInRight">    
             <a href="Imagenes/Foto-Beso.jpg">
                 <img class="bordes-redondeados" 
                 src="Imagenes/Foto-Beso.jpg" 
@@ -55,7 +59,7 @@
             </a>
             <h2 class="titulos">Amor</h2>
             </div>
-            <div class="foto foto-izq">
+            <div class="foto foto-izq animate__animated animate__fadeInLeft">
             <a href="Imagenes/Foto-Gato.jpg">
                 <img class="bordes-redondeados"  
                 src="Imagenes/Foto-Gato.jpg" 
@@ -65,7 +69,7 @@
             </a>
             <h2 class="titulos">Animal</h2>
             </div>
-            <div class="foto foto-der">
+            <div class="foto foto-der animate__animated animate__fadeInRight">
             <a href="Imagenes/Foto-Reflejo.jpg">
                 <img class="bordes-redondeados" 
                 src="Imagenes/Foto-Reflejo.jpg" 
