--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <title>Moonlight</title>
     <link rel="shortcut icon" href="Imagenes/Moonlight.png">
     <link href="css/styles.css" rel="stylesheet" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 </head>
 <body id="fondo" class="grid">
-    <nav class="navegation">
+    <nav class="navegation animate__animated animate__fadeInLeft">
         <a href="index.html">
-            <img src="Imagenes/Moonlight.png" width="120px" title="Inicio" 
+            <img src="Imagenes/Moonlight.png" class="moonlight animate__animated animate__rotateIn" title="Inicio" 
             />
         </a>
         <ul>
