--- a/moda.html
+++ b/moda.html
@@ -5,13 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Moonlight - Moda</title>
   <link href="css/styles.css" rel="stylesheet" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 </head>
 <body id="fondo-5">
   <div id="grid-2">
-    
-    <nav class="navegation-3">
+
+    <nav class="navegation-3 animate__animated animate__fadeInLeft">
       <a href="index.html">
-        <img src="Imagenes/Moonlight.png" width="120px" title="Inicio" 
+        <img src="Imagenes/Moonlight.png" class="moonlight animate__animated animate__rotateIn" title="Inicio" 
         />
       </a>
       <ul>
@@ -29,11 +33,11 @@
         </li>
       </ul>
     </nav>
-    <header class="header">
+    <header class="header animate__animated animate__fadeInDown">
         <h3>Moda</h3>
     </header> 
     <section class="columnas">
-      <div class="foto-1">    
+      <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Juli1.jpg">
             <img src="Imagenes/Juli1.jpg" 
             alt="Foto Modelo Juli" 
@@ -41,7 +45,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Juli2.jpg">
             <img src="Imagenes/Juli2.jpg" 
             alt="Foto Modelo Juli" 
@@ -49,7 +53,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Juli3.jpg">
             <img src="Imagenes/Juli3.jpg" 
             alt="Foto Modelo Juli" 
@@ -57,7 +61,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Juli4.jpg">
             <img src="Imagenes/Juli4.jpg" 
             alt="Foto Modelo Juli" 
@@ -65,7 +69,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Juli5.jpg">
             <img src="Imagenes/Juli5.jpg" 
             alt="Foto Modelo Juli" 
@@ -73,7 +77,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Juli6.jpg">
             <img src="Imagenes/Juli6.jpg" 
             alt="Foto Modelo Juli" 
@@ -81,7 +85,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Zoe1.jpg">
             <img src="Imagenes/Zoe1.jpg" 
             alt="Foto Modelo Zoe" 
@@ -89,7 +93,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Zoe2.jpg">
             <img src="Imagenes/Zoe2.jpg" 
             alt="Foto Modelo Zoe" 
@@ -97,7 +101,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Zoe3.jpg">
             <img src="Imagenes/Zoe3.jpg" 
             alt="Foto Modelo Zoe" 
@@ -105,7 +109,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Zoe4.jpg">
             <img src="Imagenes/Zoe4.jpg" 
             alt="Foto Modelo Zoe" 
@@ -113,7 +117,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Zoe5.jpg">
             <img src="Imagenes/Zoe5.jpg" 
             alt="Foto Modelo Zoe" 
@@ -121,7 +125,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Zoe6.jpg">
             <img src="Imagenes/Zoe6.jpg" 
             alt="Foto Modelo Zoe" 
@@ -129,7 +133,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Zoe7.jpg">
             <img src="Imagenes/Zoe7.jpg" 
             alt="Foto Modelo Zoe" 
@@ -137,7 +141,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Cami1.jpg">
             <img src="Imagenes/Cami1.jpg" 
             alt="Foto Modelo Cami" 
@@ -145,7 +149,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Cami2.jpg">
             <img src="Imagenes/Cami2.jpg" 
             alt="Foto Modelo Cami" 
@@ -153,7 +157,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Cami3.jpg">
             <img src="Imagenes/Cami3.jpg" 
             alt="Foto Modelo Cami" 
@@ -161,7 +165,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Cami4.jpg">
             <img src="Imagenes/Cami4.jpg" 
             alt="Foto Modelo Cami" 
@@ -169,7 +173,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Cami5.jpg">
             <img src="Imagenes/Cami5.jpg" 
             alt="Foto Modelo Cami" 
@@ -177,7 +181,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Cami6.jpg">
             <img src="Imagenes/Cami6.jpg" 
             alt="Foto Modelo Cami" 
@@ -185,7 +189,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Meli1.jpg">
             <img src="Imagenes/Meli1.jpg" 
             alt="Foto Modelo Meli" 
@@ -193,7 +197,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Meli2.jpg">
             <img src="Imagenes/Meli2.jpg" 
             alt="Foto Modelo Meli" 
@@ -201,7 +205,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Meli3.jpg">
             <img src="Imagenes/Meli3.jpg" 
             alt="Foto Modelo Meli" 
@@ -209,7 +213,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
         <a href="Imagenes/Meli4.jpg">
             <img src="Imagenes/Meli4.jpg" 
             alt="Foto Modelo Meli" 
@@ -217,7 +221,7 @@
             />
         </a>
     </div>
-    <div class="foto-1">    
+    <div class="foto-1 animate__animated animate__flipInX">    
       <a href="Imagenes/Meli5.jpg">
           <img src="Imagenes/Meli5.jpg" 
           alt="Foto Modelo Meli" 
