--- a/sobremi.html
+++ b/sobremi.html
@@ -6,11 +6,15 @@
     <title>Moonlight - Sobre Mi</title>
     <link rel="shortcut icon" href="imagenes/Moonlight.png">
     <link href="css/styles.css" rel="stylesheet" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 </head>
 <body id="fondo-3">
-    <nav class="navegation">
+    <nav class="navegation animate__animated animate__fadeInLeft">
         <a href="index.html">
-            <img src="Imagenes/Moonlight.png" width="120px" title="Inicio" 
+            <img src="Imagenes/Moonlight.png" class="moonlight animate__animated animate__rotateIn" title="Inicio" 
             />
         </a>
         <ul>
@@ -29,8 +33,8 @@
         </ul>
     </nav>
     <section>
-        <h2 class="sobre-mi">Sobre mí</h2>
-        <p class="sobre-mi-2">Fotógrafa desde chica. Realicé varios cursos de fotografía a lo largo de mi vida. 
+        <h2 class="sobre-mi animate__animated animate__fadeInDown">Sobre mí</h2>
+        <p class="sobre-mi-2 animate__animated animate__fadeInDown">Fotógrafa desde chica. Realicé varios cursos de fotografía a lo largo de mi vida. 
             Me metí en la carrera de Diseño de Imagen y Sonido en la Universidad de Buenos Aires para poder ampliar mi visión del mundo y aportar 
             nuevas formas de hacer y mostrar mi trabajo. Siempre apasionada por cualquier rama de la fotografía, exclusivamente la moda, en la cual 
             actualmente me desempeño. Dispuesta siempre a nuevas propuestas.</p>
