--- a/fotografias.html
+++ b/fotografias.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="FOTOGRAFÍA, FOTÓGRAFA, PHOTOGRAPHY, PHOTO, PHOTOS, PHOTOGRAPHER, IMAGES, GALLERY, IMAGENES, MOONLIGHT, MODA, MODELO, SESIONES, BOOK, PRODUCCION">
+    <meta name="description" content="Sección de álbumes fotográficos realizados por Moonlight Photography.">
     <title>Moonlight - Fotografías</title>
     <link rel="shortcut icon" href="imagenes/Moonlight.png">
     <link href="css/styles.css" rel="stylesheet" />
