--- a/moda.html
+++ b/moda.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Moonlight - Moda</title>
+  <meta name="keywords" content="FOTOGRAFÍA, FOTÓGRAFA, PHOTOGRAPHY, PHOTO, PHOTOS, PHOTOGRAPHER, IMAGES, GALLERY, IMAGENES, MOONLIGHT, MODA, MODELO, SESIONES, BOOK, PRODUCCION">
+  <meta name="description" content="Álbum de fotografías llamado Moda, que contiene varias sesiones de modelaje realizadas por Moonlight Photography">
+  <title> Moonlight - Moda</title>
   <link href="css/styles.css" rel="stylesheet" />
   <link
     rel="stylesheet"
