--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="FOTOGRAFÍA, FOTÓGRAFA, PHOTOGRAPHY, PHOTO, PHOTOS, PHOTOGRAPHER, IMAGES, GALLERY, IMAGENES, MOONLIGHT, MODA, MODELO, SESIONES, BOOK, PRODUCCION">
+    <meta name="description" content="Página oficial de Moonlight Photography. Un recorrido sobre la vida y obras de la fotógrafa Luz Bevacqua.">
     <title>Moonlight</title>
     <link rel="shortcut icon" href="Imagenes/Moonlight.png">
     <link href="css/styles.css" rel="stylesheet" />
