--- a/fotografias.html
+++ b/fotografias.html
@@ -85,7 +85,7 @@
     </div>
     <footer id="footer-2">
         <div class="direccion">
-            <h2>Dirección del Estudio Fotográfico</h2>
+            <h2 style="font-size: 25px; margin: 0px -20px;">Dirección del Estudio Fotográfico</h2>
         </div>
         <div>
             <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3284.8917713882406!2d-58.423567288879106!3d-34.58160497284943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzTCsDM0JzUzLjgiUyA1OMKwMjUnMTUuNiJX!5e0!3m2!1ses-419!2sar!4v1690161821956!5m2!1ses-419!2sar" 
@@ -120,8 +120,8 @@
             <form action="texto.text" method="post" enctype="text/plain">
                 <label for="Correo Electrónico">Regístrate:</label>  
                 <input type="email" id="Correo Electrónico" 
-                placeholder="Tu Email aquí" size="35px"/>
-                <input type="submit" value="Enviar"/>
+                placeholder="Tu Email aquí" size="35px" style="margin-bottom: 15px; padding: 10px;"/>
+                <input type="submit" value="Enviar" style="background-color: rgb(89, 89, 96); font-weight:bold; color: aliceblue; font-family: 'Quicksand-Regular'; padding: 5px;"/>
             </form>
     </div>
     <div class="copyright">
