--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Moonlight</title>
     <link rel="shortcut icon" href="Imagenes/Moonlight.png">
     <link href="css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -36,7 +37,7 @@
     </nav>
     <footer id="footer">
         <div class="direccion">
-            <h2>Dirección del Estudio Fotográfico</h2>
+            <h2 style="font-size: 25px; margin: 0px -20px;">Dirección del Estudio Fotográfico</h2>
         </div>
         <div>
             <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3284.8917713882406!2d-58.423567288879106!3d-34.58160497284943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzTCsDM0JzUzLjgiUyA1OMKwMjUnMTUuNiJX!5e0!3m2!1ses-419!2sar!4v1690161821956!5m2!1ses-419!2sar" 
@@ -71,13 +72,14 @@
             <form action="texto.text" method="post" enctype="text/plain">
                 <label for="Correo Electrónico">Regístrate:</label>  
                 <input type="email" id="Correo Electrónico" 
-                placeholder="Tu Email aquí" size="35px"/>
-                <input type="submit" value="Enviar"/>
+                placeholder="Tu Email aquí" size="35px" style="margin-bottom: 15px;"/>
+                <input type="submit" value="Enviar" style="background-color: rgb(89, 89, 96); font-weight:bold; color: aliceblue;"/>
             </form>
     </div>
     <div class="copyright">
         <p>©Moonlight</p>
     </div>
     </footer>
+    <script src="js/bootstrap.js"></script>
 </body>
 </html>
